author names hw2

--- a/homework sheet 2/main.tex
+++ b/homework sheet 2/main.tex
@@ -5,7 +5,7 @@
 \begin{document}
 \section*{\huge Mathematics Homework Sheet 2}
 \begin{flushright}
-   \textbf{Author: Abdullah Oguz Topcuoglu}
+   \textbf{Author: Abdullah Oguz Topcuoglu \& Yousef Farag}
 \end{flushright}
 
 \begin{flushleft}
