--- a/homework sheet 3/main.tex
+++ b/homework sheet 3/main.tex
@@ -8,6 +8,15 @@
    \textbf{Author: Abdullah Oguz Topcuoglu \& Yousef Farag}
 \end{flushright}
 
+\begin{flushleft}
+   \textbf{\Large Problem 1}
+\end{flushleft}
+
+\begin{flushleft}
+   \textbf{\Large Problem 1 (a)}
+\end{flushleft}
+
+For i=0:
 
 
 \end{document}
