--- a/homework sheet 3/main.tex
+++ b/homework sheet 3/main.tex
@@ -17,6 +17,78 @@
 \end{flushleft}
 
 For i=0:
+\begin{align*}
+   f_1(-1) &= -1 \\
+   f_1(0)  &= 0 \\
+   f_1(1)  &= 0 \\
+\end{align*}
+Meaning that:
+\[
+   f_1(\{-1, 0, 1\}) = \{-1, 0, 0\} = \{-1, 0\}
+\]
+\\
+Now lets take a look at the inverse:
+\begin{align*}
+   f_1(-1) &= -1 \\
+   f_1(0)  &= 0 \\
+   f_1(1)  &= 0 \\
+   f_1(2)  &= 1 \\
+\end{align*}
+These are the only values we can get -1, 0, 1. Meaning that:
+\[
+   f_1^{-1}(\{-1, 0, 1\}) = \{-1, 0, 1, 2\}
+\]
+\\
+Now, for i=2 (the second function):
+\begin{align*}
+   f_2(-1) &= -4 \\
+   f_2(0)  &= -3 \\
+   f_2(1)  &= -2 \\
+\end{align*}
+Meaning that:
+\[
+   f_2(\{-1, 0, 1\}) = \{-4, -3, -2\}
+\]
+\\
+Now lets take a look at the inverse:
+\begin{align*}
+   f_2(2) &= -1 \\
+   f_2(3) &= 0 \\
+   f_2(4) &= 1 \\
+\end{align*}
+These are the only values we can get -1, 0, 1. Meaning that:
+\[
+   f_2^{-1}(\{-1, 0, 1\}) = \{2, 3, 4\}
+\]
+\\
+Now, for i=3 (the third function):
+\begin{align*}
+   f_3(-1) &= -2 \\
+   f_3(0)  &= 0 \\
+   f_3(1)  &= 2 \\
+\end{align*}
+Meaning that:
+\[
+   f_3(\{-1, 0, 1\}) = \{-2, 0, 2\}
+\]
+\\
+Now lets take a look at the inverse:
+\begin{align*}
+   f_3(x) & = -1 \text{, No such $x$ exists in the domain of $f_3$} \\
+          & \text{In other words, } f_3^{-1}(\{-1\}) = \emptyset    \\
+   f_3(0) & = 0                                                     \\
+   f_3(x) & = 1 \text{, No such $x$ exists in the domain of $f_3$}  \\
+          & \text{In other words, } f_3^{-1}(\{1\}) = \emptyset     \\
+\end{align*}
+These are the only values we can get -1, 0, 1. Meaning that:
+\[
+   f_3^{-1}(\{-1, 0, 1\}) = \{0\}
+\]
+
+
+\begin{flushleft}
+   \textbf{\Large Problem 1 (b)}
+\end{flushleft}
 
 
 \end{document}
