--- a/homework sheet 3/main.tex
+++ b/homework sheet 3/main.tex
@@ -126,4 +126,22 @@ Now, lets take a look at \(f_3\): \\
 \(f_3\) is not surjective because it does not map to all the values in the codomain. \\
 For example there is no element in the domain of \(f_3\) that maps to 1. Generally all the odd numbers are not in the range of \(f_3\). \\
 
+
+\begin{flushleft}
+   \textbf{\Large Problem 1 (c)}
+\end{flushleft}
+
+By looking at Problem 1 (b), \\
+We see that \(f_1\) is not injective thus \(f_1\) is not bijective. \\
+We see that \(f_2\) is injective and surjective thus \(f_2\) is bijective. \\
+We see that \(f_3\) is not surjective thus \(f_3\) is not bijective. \\
+\\
+Inverse of \(f_2\):
+\begin{align*}
+   f_2: Z \rightarrow Z,& \quad x \rightsquigarrow x - 3 \\
+   f_2^{-1}: Z \rightarrow Z,& \quad x \rightsquigarrow x + 3 \\
+\end{align*}
+\\
+
+
 \end{document}
