--- a/homework sheet 4/main.tex
+++ b/homework sheet 4/main.tex
@@ -8,4 +8,48 @@
    \textbf{Author: Abdullah Oguz Topcuoglu \& Yousef Farag}
 \end{flushright}
 
+\section*{Problem 1}
+We want to prove
+\[
+   (\forall n \in N) \land (x \in R) \land (x \geq -1) \qquad (1 + x)^n \geq 1 + nx
+\]
+by using mathematical induction.\\
+\textbf{Base Case:} For $n = 1$, we have
+\[
+   (1 + x)^1 = 1 + x \geq 1 + 1 \cdot x
+\]
+Which is true for every \(x \in R\) so it means it is also true for \(x \in [-1, \infty]\)\\
+\\
+\textbf{Inductive Step:} Assume that the statement is true for \(n = k\), i.e.
+\[
+   (1 + x)^k \geq 1 + kx
+\]
+is true for every \(x \in [-1, \infty]\).\\
+We want to prove that the statement is also true for \(n = k + 1\), i.e.
+\[
+   (1 + x)^{k + 1} \geq 1 + (k + 1)x
+\]
+for every \(x \in [-1, \infty]\).\\
+
+\begin{align}
+   (1 + x)^{k + 1} & = (1 + x)^k \cdot (1 + x)                                                                                  \\
+                   & \geq (1 + kx) \cdot (1 + x) & (\text{Using inductive step}) \label{eg:step2}                                                 \\
+                   & = 1 + kx + x + kx^2                                                                                        \\
+                   & = 1 + (k + 1)x + kx^2                                                                                      \\
+                   & \geq 1 + (k + 1)x            &\text{(Since \(kx^2 \geq 0\))}
+\end{align}
+\\
+And this completes the proof.
+\\
+\\
+\textbf{Give a counterexample to show that the condition x \(\geq\) -1 is necessary:}\\
+Let's take \(x = -2\) and \(n = 2\). Then we have
+
+\begin{align*}
+   (1 - 2)^2 &\geq 1 + 2 \cdot (-2) \\
+   (-1)^2    &\geq 1 - 4            \\
+   1         &\geq -3               \\
+\end{align*}
+Which is not true. In fact it would be false when \(n\) is even. So the condition \(x \geq -1\) is necessary. Because that way \(1 + x\) is never negative
+
 \end{document}
