--- a/homework sheet 4/main.tex
+++ b/homework sheet 4/main.tex
@@ -74,4 +74,28 @@ Let's take \(x = -2\) and \(n = 2\). Then we have
 \end{align*}
 Which is not true. In fact it would be false when \(n\) is even. So the condition \(x \geq -1\) is necessary. Because that way \(1 + x\) is never negative
 
+\section*{Problem 2}
+\section*{Problem 2 (a)}
+\[
+   X_1 := \{x \in R: x^2 - 2x \leq 0\}
+\]
+What x values satisfy this condition? \\
+\begin{align*}
+   x^2 - 2x &\leq 0 \\
+   x(x - 2) &\leq 0
+\end{align*}
+In order this inequality to be satisfied the signs of \(x\) and \(x - 2\) must be different or one of them needs to be zero, 
+and this only happens when \(0 \leq x \leq 2\). \\
+So this means:
+\[
+   X_1 = [0, 2]
+\]
+In this case \(X_1\) is bounded from below and above.\\
+\begin{align*}
+   sup X_1 &= 2 \\
+   inf X_1 &= 0
+\end{align*}
+And \(sup X_1 \in X_1\) which means \(sup X_1\) is also the maximum value.\\
+\(inf X_1 \in X_1\) which means \(inf X_1\) is also the minimum value.\\
+
 \end{document}
