--- a/homework sheet 4/main.tex
+++ b/homework sheet 4/main.tex
@@ -129,4 +129,24 @@ And \(sup X_2 \notin X_2\) which means \(sup X_2\) is not the maximum value.\\
 \(inf X_2 \notin X_2\) which means \(inf X_2\) is not the minimum value.\\
 Maximum and minimum values are not in the set.\\
 
+\section*{Problem 4}
+\section*{Problem 4 (a)}
+We want to prove
+\[
+   \forall x,y \in R \quad |x + y| \leq |x| + |y|
+\]
+Let's continue with this inequality
+\begin{align*}
+   \forall x,y \in R \quad x &\leq |x|, \;  y \leq |y|, \; -x \leq |x|, \;  -y \leq |y| \\
+   x + y &\leq |x| + |y| &(\text{Considering the first two inequalities above}) \\
+   -x - y &\leq |x| + |y| &(\text{Considering the last two inequalities above}) \\
+\end{align*}
+(\(x+y\)) and (\(-x-y\)) is nothing but two possible outcomes of \(|x+y|\) \\
+So, we have
+\[
+   |x + y| \leq |x| + |y|
+\]
+And this completes the proof.\\
+
+
 \end{document}
