--- a/homework sheet 5/main.tex
+++ b/homework sheet 5/main.tex
@@ -8,4 +8,16 @@
    \textbf{Author: Abdullah Oguz Topcuoglu \& Yousef Farag}
 \end{flushright}
 
+\section*{Problem 1}
+
+\section*{Problem 1(b)}
+\section*{Problem 1(b)(i)}
+We want to prove \(\bigcap_{i \in I} U_i\) is closed.\\
+We are given (\(\forall i \in I \quad U_i \subseteq R\)) is closed. \\
+A set being closed means that its complement is open. So we want to prove that \(\bigcup_{i \in I} U_i^c\) is open.\\
+Since each \(U_i\) is closed, we know that \(U_i^c\) is open.\\
+And from the lecture we know that union or intersection of open sets is open. Thus \(\bigcup_{i \in I} U_i^c\) is open. Which means that \(\bigcap_{i \in I} U_i\) is closed.\\
+And this completes the proof.\\
+
+
 \end{document}
