--- a/homework sheet 5/main.tex
+++ b/homework sheet 5/main.tex
@@ -19,5 +19,12 @@ Since each \(U_i\) is closed, we know that \(U_i^c\) is open.\\
 And from the lecture we know that union or intersection of open sets is open. Thus \(\bigcup_{i \in I} U_i^c\) is open. Which means that \(\bigcap_{i \in I} U_i\) is closed.\\
 And this completes the proof.\\
 
+\section*{Problem 1(b)(ii)}
+We want to prove \(\bigcup_{i = 1}^n U_i\) is closed.\\
+We are given (\(U_1,...,U_n \subseteq R\)) are closed. \\
+A set being closed means that its complement is open. So we want to prove that \(\bigcap_{i = 1}^n U_i^c\) is open.\\
+Since each \(U_i\) is closed, we know that \(U_i^c\) is open.\\
+And from the lecture we know that union or intersection of open sets is open. Thus \(\bigcap_{i = 1}^n U_i^c\) is open. Which means that \(\bigcup_{i = 1}^n U_i\) is closed.\\
+And this completes the proof.\\
 
 \end{document}
