--- a/homework sheet 5/main.tex
+++ b/homework sheet 5/main.tex
@@ -27,4 +27,22 @@ Since each \(U_i\) is closed, we know that \(U_i^c\) is open.\\
 And from the lecture we know that union or intersection of open sets is open. Thus \(\bigcap_{i = 1}^n U_i^c\) is open. Which means that \(\bigcup_{i = 1}^n U_i\) is closed.\\
 And this completes the proof.\\
 
+\section*{Problem 3}
+
+\section*{Problem 3(a)}
+\[
+   a_n := (-1)^n
+\]
+\(a_n\) is not convergent. Because, for example, if we take \(\epsilon = 1/10\) then there is no N that satisfies
+\[
+   |a_N - a| < 1/10
+\]
+\(a_n\) alternates between -1 and 1. So we can't find a value \(a\) that stays in the neighborhood of both -1 and 1.
+For example, when \(\epsilon = 1/10\) there is no \(a \in R\) that satisfies
+\[
+   |1 - a| < 1/10 \quad \text{and} \quad |-1 - a| < 1/10
+\]
+No matter what you choose N to be you will always get for some \(j \in N\) \(a_j = 1\) and \(a_j = -1\). \\
+Thus \(a_n\) is divergent.\\
+
 \end{document}
