--- a/homework sheet 5/main.tex
+++ b/homework sheet 5/main.tex
@@ -35,7 +35,7 @@ And this completes the proof.\\
 \]
 \(a_n\) is not convergent. Because, for example, if we take \(\epsilon = 1/10\) then there is no N that satisfies
 \[
-   |a_N - a| < 1/10
+   \forall n \geq N \quad |a_n - a| < 1/10
 \]
 \(a_n\) alternates between -1 and 1. So we can't find a value \(a\) that stays in the neighborhood of both -1 and 1.
 For example, when \(\epsilon = 1/10\) there is no \(a \in R\) that satisfies
@@ -44,5 +44,38 @@ For example, when \(\epsilon = 1/10\) there is no \(a \in R\) that satisfies
 \]
 No matter what you choose N to be you will always get for some \(j \in N\) \(a_j = 1\) and \(a_j = -1\). \\
 Thus \(a_n\) is divergent.\\
+
+\section*{Problem 3(b)}
+\[
+   b_n := \frac{(-1)^n}{n}
+\]
+\(b_n\) is convergent.\\
+Because, we can find an N that satisfies
+\[
+   \forall \epsilon > 0 \quad \forall n \geq N \quad |b_n - 0| < \epsilon
+\]
+We are trying to find an N such that this inequality holds for any choice of \(\epsilon\).\\
+\[
+   |\frac{(-1)^n}{n}| < \epsilon \qquad \text{when} \; n \geq N
+\]
+When \(n\) is even, we have
+\begin{align*}
+   & |\frac{1}{n}| < \epsilon \qquad \text{when} \; n \geq N \\
+   & \frac{1}{n} < \epsilon \qquad \text{when} \; n \geq N \\
+   & n > \frac{1}{\epsilon} \qquad \text{when} \; n \geq N
+\end{align*}
+So if we choose N to be the any integer greater than \(\frac{1}{\epsilon}\) then the inequality holds for even \(n\). So, such N exist when \(n\) is even. \\
+When \(n\) is odd, we have
+\begin{align*}
+   & |\frac{-1}{n}| < \epsilon \qquad \text{when} \; n \geq N \\
+   & \frac{1}{n} < \epsilon \qquad \text{when} \; n \geq N \\
+   & n > \frac{1}{\epsilon} \qquad \text{when} \; n \geq N
+\end{align*}
+Basically, we have the same thing for odd \(n\). So, such N exist when \(n\) is odd too. \\
+Thus, we can find an N that satisfies the inequality for any choice of \(\epsilon\) if we choose \(a\) to be 0.\\
+Since \(a = 0\), the limit is zero.\\
+\[
+   \lim_{n \to \infty} b_n = \frac{(-1)^n}{n} = 0
+\]
 
 \end{document}
