hw7 1 second part

--- a/homework sheet 7/main.tex
+++ b/homework sheet 7/main.tex
@@ -8,4 +8,25 @@
    \textbf{Author: Abdullah Oguz Topcuoglu \& Yousef Farag}
 \end{flushright}
 
+\section*{Problem 1}
+
+% TODO: first part not done
+
+If \(b_n\) is convergent then
+\[
+   \liminf_{n \rightarrow \infty} b_n = \limsup_{n \rightarrow \infty} b_n = \lim_{n \rightarrow \infty} b_n
+\]
+From the first inequality we have
+\[
+   \limsup_{n \rightarrow \infty} (a_n + b_n) \leq \limsup_{n \rightarrow \infty} a_n + \lim_{n \rightarrow \infty} b_n
+\]
+And from the second inequality we have
+\[
+   \limsup_{n \rightarrow \infty} (a_n + b_n) \geq \limsup_{n \rightarrow \infty} a_n + \lim_{n \rightarrow \infty} b_n
+\]
+Combining these two inequalities we get
+\[
+   \limsup_{n \rightarrow \infty} (a_n + b_n) = \limsup_{n \rightarrow \infty} a_n + \lim_{n \rightarrow \infty} b_n
+\]
+
 \end{document}
