--- a/homework sheet 7/main.tex
+++ b/homework sheet 7/main.tex
@@ -29,4 +29,69 @@ Combining these two inequalities we get
    \limsup_{n \rightarrow \infty} (a_n + b_n) = \limsup_{n \rightarrow \infty} a_n + \lim_{n \rightarrow \infty} b_n
 \]
 
+\section*{Problem 3}
+\(a_n\) is monotonically decreasing and \(\forall n \in N, a_n \geq 0\) and \(\lim_{n \rightarrow \infty} a_n = 0\). \\
+We want to show that \(\sum_{n=1}^{\infty} (-1)^n a_n\) converges. \\
+\[
+   \sum_{n=1}^{\infty} (-1)^n a_n = - a_1 + a_2 - a_3 + a_4 - \ldots
+\]
+We can write this as
+\[
+   \sum_{n=1}^{\infty} (-1)^n a_n = - (a_1 - a_2) - (a_3 - a_4) - \ldots
+\]
+Since \(a_n\) is monotonically decreasing, we have
+\[
+   - (a_1 - a_2) - (a_3 - a_4) - \ldots \leq 0
+\]
+Because every paranthesis group is positive and they have minus sign before them so we are adding zero or negative terms. \\
+Therefore, \(\sum_{n=1}^{\infty} (-1)^n a_n\) is bounded above by 0. \\
+And we can also rewrite the sum as follows:
+\[
+   \sum_{n=1}^{\infty} (-1)^n a_n = -a_1 + (a_2 - a_3) + (a_4 - a_5) + \ldots
+\]
+Since \(a_n\) is monotonically decreasing, every paranthesis group is positive or zero. We are adding positive or zero elements to \(-a_1\)
+which means the sum is greater or equal to \(-a_1\)
+\[
+   -a_1 \leq -a_1 + (a_2 - a_3) + (a_4 - a_5) + \ldots
+\]
+Therefore, \(\sum_{n=1}^{\infty} (-1)^n a_n\) is bounded below by \(-a_1\). \\
+Let's take a look at odd and even indexed terms:
+\[
+   \sum_{n=1}^{\infty} (-1)^{2n} a_{2n} = a_2 + a_4 + a_6 + a_8 + \ldots \qquad (1)
+\]
+\[
+   \sum_{n=1}^{\infty} (-1)^{2n+1} a_{2n+1} = -a_1 - a_3 - a_5 - a_7 + \ldots \qquad (2)
+\]
+Since \(a_n \geq 0\), (2) is monotonically decreasing and similarly (1) is monotonically increasing. \\
+\\
+\\
+\[
+   s_n = \sum_{k=1}^{n} (-1)^k a_k
+\]
+\[
+   s_{2n} = \sum_{k=1}^{2n} (-1)^k a_k = (-a_1 + a_2) + (-a_3 + a_4) + \ldots
+\]
+\(s_{2n}\) is monotonically decreasing because every paranthesis group is negative or zero. So we are adding \(\leq 0\) elements each iteration
+which means \(s_{2n} \geq s_{2(n+1)}\) \\
+\\
+\[
+   s_{2n+1} = \sum_{k=1}^{2n+1} (-1)^k a_k = -a_1 + (a_2 - a_3) + (a_4 - a_5) + \ldots
+\]
+\(s_{2n+1}\) is monotonically increasing because every paranthesis group is positive or zero. So we are adding \(\geq 0\) elements each iteration
+which means \(s_{2n+1} \leq s_{2(n+1)+1}\) \\
+\\
+And now it suffices to show that \(s_{2l-1} \leq s_{2l}, \forall l \in N\)
+\begin{align*}
+   s_{2l} &= \sum_{k=1}^{2l} (-1)^k a_k \\
+   s_{2l - 1} &= \sum_{k=1}^{2l-1} (-1)^k a_k \\
+   s_{2l} - s_{2l-1} &= \sum_{k=1}^{2l} (-1)^k a_k - \sum_{k=1}^{2l-1} (-1)^k a_k \\
+   &= (-1)^{2l} a_{2l} + \sum_{k=1}^{2l-1} (-1)^k a_k - \sum_{k=1}^{2l-1} (-1)^k a_k \\
+   &= (-1)^{2l} a_{2l} \\
+   &= a_{2l} \\
+   &\geq 0 \quad \text{because} \quad a_n \geq 0 \quad \forall n \in N
+\end{align*}
+Therefore, \(s_{2l-1} \leq s_{2l}, \forall l \in N\) \\
+Therefore, \(\sum_{n=1}^{\infty} (-1)^n a_n\) converges. \\
+I followed the hint in the homework sheet. \\
+
 \end{document}
